--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -1,4 +1,4 @@
-<section class="hero py-16">
+<section class="hero px-16 py-10 ">
     <div class="container mx-auto flex items-center justify-between">
         <div class="w-1/2">
             <h6 class="text-lg"><em>Are you hungry?</em></h6>
@@ -6,16 +6,18 @@
             <button class="px-6 py-2 rounded-full text-white font-bold mt-4 btn-primary">Order Now</button>
         </div>
         <div class="w-1/2">
-            <img src="/img/hero-pizza.png" alt="">
+           <img src="/img/hero-pizza.png" alt="" data-tilt="" style="transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
         </div>
     </div>
 </section>
-<section class="menu container mx-auto py-8">
+
+
+<section class="menu container mx-auto p-8">
     <h1 class="text-xl font-bold mb-8">All Pizzas</h1>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 col-gap-12 row-gap-16">
-        <% pizzas.forEach(function(pizza) { %>
+        <!-- <% pizzas.forEach(function(pizza) { %> -->
         <div class="w-full md:w-64">
-            <img class="h-40 mb-4 mx-auto" src="/img/<%= pizza.image %>" alt="">
+            <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="pizza">
             <div class="text-center">
                 <h2 class="mb-4 text-lg"><%= pizza.name %></h2>
                 <span class="size py-1 px-4 rounded-full uppercase text-xs"><%= pizza.size %></span>
@@ -29,7 +31,8 @@
                 </div>
             </div>
         </div>
-        <% }) %>
+        <!-- <% }) %> -->
 
     </div>
 </section>
+
