--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -19,13 +19,20 @@
         </div>
         <div>
             <ul class="flex items-center">
-                <li class="ml-6"><a href="/">Menu</a></li>
+                <li class="ml-6"><a href="/menu">Menu</a></li>
                 <% if(user) { %>
+                    <li class="ml-6">
+                        <form id="logout" action="/logout" method="POST">
+                        <a onclick="document.getElementById('orders').submit()" href="/customer/orders">MyOrders</a>
+                    </form>
+                    </li>
                 <li class="ml-6">
                     <form id="logout" action="/logout" method="POST">
-                        <a onclick="document.getElementById('logout').submit()" href="#">Logout</a>
+                        <p><%= user.name %></p>
+                        <a onclick="document.getElementById('logout').submit()" href="#">Logout</a>                        
                     </form>
                 </li>
+                
                 <% } else { %>
                 <li class="ml-6"><a href="/register">Register</a></li>
                 <li class="ml-6"><a href="/login">Login</a></li>
